<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
            name="shoeDetailViewModel"
            type="com.example.shoestoreinvetoryapp.viewmodels.ShoeListViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            tools:context=".views.ShoeDetailFragment">

            <TextView
                android:id="@+id/textViewEntry"
                style="@style/LabelStyle"
                android:textAlignment="center"
                android:textSize="@dimen/text25"
                android:layout_marginTop="@dimen/margin32"
                android:layout_marginStart="@dimen/margin8"
                android:layout_marginEnd="@dimen/margin8"
                android:text="@string/new_shoe_entry"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewName"
                style="@style/LabelStyle"
                android:layout_marginTop="@dimen/margin32"
                android:text="@string/enter_shoe"
                android:layout_marginStart="@dimen/margin10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEntry"/>

            <EditText
                android:id="@+id/edit_shoe_name"
                style="@style/EditStyle"
                android:hint="@string/shoe_field"
                android:text="@={shoeDetailViewModel.shoe.name}"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewName" />

            <TextView
                android:id="@+id/textViewCompany"
                style="@style/LabelStyle"
                android:layout_marginTop="@dimen/margin16"
                android:text="@string/enter_company"
                android:layout_marginStart="@dimen/margin10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_shoe_name"/>

            <EditText
                android:id="@+id/edit_shoe_company"
                style="@style/EditStyle"
                android:hint="@string/shoe_company"
                android:text="@={shoeDetailViewModel.shoe.company}"
                android:inputType="text"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCompany"/>

            <TextView
                android:id="@+id/textViewSize"
                style="@style/LabelStyle"
                android:layout_marginTop="@dimen/margin16"
                android:text="@string/enter_size"
                android:layout_marginStart="@dimen/margin10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_shoe_company"/>

            <EditText
                android:id="@+id/edit_shoe_size"
                style="@style/EditStyle"
                android:hint="@string/shoe_size"
                android:text="@={shoeDetailViewModel.shoe.size}"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSize"/>

            <TextView
                android:id="@+id/textViewDesc"
                style="@style/LabelStyle"
                android:layout_marginTop="@dimen/margin16"
                android:text="@string/enter_desc"
                android:layout_marginStart="@dimen/margin10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_shoe_size"/>

            <EditText
                android:id="@+id/edit_shoe_description"
                style="@style/EditStyle"
                android:hint="@string/shoe_desc"
                android:inputType="text"
                android:text="@={shoeDetailViewModel.shoe.description}"
                android:lines="3"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDesc"/>

            <Button
                android:id="@+id/btnCancel"
                style="@style/ButtonGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin32"
                android:layout_marginStart="8dp"
                android:text="@string/button_cancel"
                app:layout_constraintEnd_toStartOf="@+id/btnSave"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_shoe_description" />

            <Button
                android:id="@+id/btnSave"
                style="@style/ButtonBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin32"
                android:layout_marginEnd="8dp"
                android:text="@string/button_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnCancel"
                app:layout_constraintTop_toBottomOf="@+id/edit_shoe_description" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>